--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^5.3.3
   provider: ^6.0.3
   cloud_firestore: ^3.1.18
+  modal_progress_hud_nsn: ^0.2.1
 
 dev_dependencies:
   flutter_test:
