--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.3
   cloud_firestore: ^3.1.18
   modal_progress_hud_nsn: ^0.2.1
+  toggle_switch: ^2.0.1
 
 dev_dependencies:
   flutter_test:
